@@ -1,4 +1,5 @@
 1.0.0 (currently working on)
+- [#3817] Fix: Calling the deprecated t3lib_div::GPvar floods the deprecation log
 - [#3811] Feature: Filter the topic list automatically by the event types that are selected in the flexforms
 - [#3806] Feature: Include the places ZIP in the thank-you e-mail to the participants
 - [#3807] Feature: Include the places ZIP in the CSV export of events
